menubar -> 일부 수정 : 레시피 검색창 위치 변경 cadetail.jsp -> footer가 화면 중간에 나타나는 오류 수정 main 일부 디자인 변경

--- a/babmukja/src/main/webapp/resources/css/menubar.css
+++ b/babmukja/src/main/webapp/resources/css/menubar.css
@@ -136,7 +136,7 @@ a:hover{
     min-height: 70px;
     max-height: 600px;
     background: white;
-    border: 5px solid #7db341;
+    border: 5px solid white;
     border-radius : 15px;
     box-shadow: 0 10px 15px 1px gray;
     font-family: 'Nanum Gothic', sans-serif;	
@@ -144,17 +144,19 @@ a:hover{
     z-index: 300;
 }
 
-.fa-caret-up{
+#sign .fa-caret-up{
     position: absolute;
     top: 39px;
     left: 11px;
-    color : #7db341;
+    color : white;
     z-index: 301;
 }
 #memberSearchForChat{
     display : flex;
     justify-content: center;
     align-content: center;
+    border : 1px solid gainsboro;
+    border-radius : 15px 15px 0 0;
 }
 input[name='member']{
     color: rgb(81,81,81);
@@ -214,8 +216,11 @@ input[name='member']:focus{
 #closeChatContainer{
     width: 100%;
     height: 20px;
-    background: tomato;
-    border-radius: 0 0 7px 7px;
+    background: white;
+    border-left:   1px solid gainsboro;
+    border-right:  1px solid gainsboro;
+    border-bottom: 1px solid gainsboro;
+    border-radius: 0 0 15px 15px;
     color: white;
     display: flex;
     justify-content: center;
@@ -223,10 +228,13 @@ input[name='member']:focus{
 }
 .fa-chevron-up{
     transition: .2s;
+    color: gainsboro;
 }
 #closeChatContainer:hover{
     background: #7db341;
     height: 25px;
+    border-radius: 0 0 15px 15px;
+    
 }
 #closeChatContainer:hover > i{
     transform: scale(1.5);
