--- a/babmukja/src/main/webapp/resources/css/recipe/recipeCaDetail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipeCaDetail.css
@@ -14,6 +14,20 @@ body {
   width: 1300px;
   margin: 0 auto;  
 }
+input[type='text'] {
+	width: 280px;
+    height: 25px;
+    border-radius: 5px;
+    margin-left: 15px;
+    text-align: center;
+    color: #515151;
+}
+input[name='searchTitle'] {
+	margin-left : 28px;
+}
+input[type='text']:focus {
+	outline : none;
+}
 .search-icon > i {
    margin-left : 5px;
    font-size: 18px;
