--- a/babmukja/src/main/webapp/resources/css/member/mypage.css
+++ b/babmukja/src/main/webapp/resources/css/member/mypage.css
@@ -45,8 +45,129 @@ canvas { width: 100%; height: 100% }
     80%{background-color: rgba(0,0,0,0.3);}
     100%{background-color: rgba(0,0,0,0.2);}
 }
-.modal-content{
+.modal-content:nth-child(1){
     background : url(/babmukja/resources/images/recipelistboard.jpg);
     background-size: cover;
     border-radius : 0;
+}
+
+body{
+    margin: 0 ;
+    box-sizing : border-box;
+    background-color: gainsboro;
+}
+#updateform-body{
+    width: 800px;
+    height: 400px;
+    background: white;
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows:10% 90%;
+}
+#updateform-sec1{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+#updateform-sec1 div{
+    text-align: center;
+    font-size: 17px;
+    color: rgb(81,81,81);
+    background: lightgray;
+}
+
+#check-userinfo{
+    display: flex;
+    justify-content: space-between;
+    align-content: space-between;
+}
+
+#updateform-sec2-imgSelector{
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    margin-top: 50px;
+    margin-left: 15px;
+    padding: 5px;
+    border: 1px solid lightgray;
+}
+#change-pass input[type='password']{
+    display: block;
+    margin : 0 auto;
+    width: 300px;
+    height: 60px;
+    border-radius: 7px;
+    border: 1px solid lightgray;
+    outline: none;
+    margin-top: 10px;
+    font-size: 24px;
+    padding-left : 10px;
+
+}
+#updateform-sec2-userinfo{
+    width: 540px;
+    height: 100%;
+}
+
+#profile-picture{
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    background: gainsboro;
+}
+#updateform-sec2-userinfo-id{
+    font-size: 30px;
+    font-weight: lighter;
+}
+#updateform-sec2-userinfo-id{
+    font-size: 30px;
+}
+#updateform-sec2-userinfo-opt{
+    font-weight: bold;
+}
+#updateform-sec2-userinfo-info{
+    font-size: 17px;
+    font-weight: lighter;
+    color: rgb(81,81,81);
+}
+#updateform-sec2-userinfo-info b{
+    font-size: 23px;
+    margin-left: 5px;
+    margin-right: 15px;
+}
+#change-pass{
+    margin-top: 15px;
+}
+#change-pass-notice1{
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+#change-pass-notice2{
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+#change-pass-notice3{
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+#change-pass-button{
+    margin:0 auto;
+    margin-top : 15px;
+    padding: 5px;
+    width:300px;
+    height: 60px;
+    background: #7db341;
+    border-radius : 7px;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+    line-height: 55px;
+    transition: .3s;
+    cursor: pointer;
+}
+#change-pass-button:hover{
+    background: #7db;
 }
