--- a/babmukja/src/main/webapp/resources/css/board/detail.css
+++ b/babmukja/src/main/webapp/resources/css/board/detail.css
@@ -1,164 +1,204 @@
 @charset "UTF-8";
+
 .board_detail_container {
-  width: 1200px;
-  margin: 0 auto;
-  margin-top: 100px;
-  display: flex;
-  justify-content: center;
+	width: 1200px;
+	margin: 0 auto;
+	margin-top: 100px;
+	display: flex;
+	justify-content: center;
 }
+
 .board_detail_writer {
-  font-weight: bold;
-  color: #7db341;
-  margin-bottom: 5px;
+	font-weight: bold;
+	color: #7db341;
+	margin-bottom: 5px;
 }
+
 .board_detail_title {
-  font-weight: bold;
-  font-size: 25px;
-  margin-bottom: 10px;
+	font-weight: bold;
+	font-size: 25px;
+	margin-bottom: 10px;
 }
+
 .board_detail_info_button {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
+
 .board_detail_info {
-  font-size: 11px;
-  margin-bottom: 10px;
-  color: gray;
+	font-size: 11px;
+	margin-bottom: 10px;
+	color: gray;
 }
-.board_detail_info .board_regDate{
-  margin-right: 5px;
+
+.board_detail_info .board_regDate {
+	margin-right: 5px;
 }
+
 .board_img_content {
-  border: 1px solid gainsboro;
-  text-align: center;
-  border-radius: 3px;
-  margin-top: 10px;
-  width: 605px;
-  height: 400px;
+	border: 1px solid gainsboro;
+	text-align: center;
+	border-radius: 3px;
+	margin-top: 10px;
+	width: 605px;
+	height: 400px;
 }
+
 .board_detail_img img {
-  all: unset;
-  width: 500px;
-  height: 300px;
-  margin-bottom: 7px;
-  margin-top: 10px;
+	all: unset;
+	width: 500px;
+	height: 300px;
+	margin-bottom: 7px;
+	margin-top: 10px;
 }
+
 .board_detail_content {
-  margin-bottom: 30px;
-  margin-top: 5px;
-  color: rgb(81, 81, 81);
-  font-weight: 500;
-  text-align: center;
-  width: 580px;
-  height: 150px;
-  border-radius: 3px;
+	margin-bottom: 30px;
+	margin-top: 5px;
+	color: rgb(81, 81, 81);
+	font-weight: 500;
+	text-align: center;
+	width: 580px;
+	height: 150px;
+	border-radius: 3px;
 }
+
 .board_detail_content {
-  margin-bottom: 30px;
-  color: rgb(81, 81, 81);
-  font-weight: 500;
+	margin-bottom: 30px;
+	color: rgb(81, 81, 81);
+	font-weight: 500;
 }
+
 .board_detail_button span {
-  font-size: 11px;
-  color: rgb(81, 81, 81);
+	font-size: 11px;
+	color: rgb(81, 81, 81);
 }
+
 .board_detail_button a {
-  color: rgb(81, 81, 81);
+	color: rgb(81, 81, 81);
 }
+
 .board_detail_button .board_update_button:hover {
-  font-size: 15px;
-  font-weight: bold;
+	font-size: 15px;
+	font-weight: bold;
 }
+
 .board_detail_button .board_delete_button:hover {
-  font-size: 15px;
-  font-weight: bold;
+	font-size: 15px;
+	font-weight: bold;
 }
+
 .board_comment_title {
-  font-weight: bold;
-  border-bottom: 3px solid gainsboro;
-  width: 600px;
-  height: 30px;
-  margin-bottom: 20px;
+	font-weight: bold;
+	border-bottom: 3px solid gainsboro;
+	width: 600px;
+	height: 30px;
+	margin-bottom: 20px;
 }
+
 .board_comment_title .comment_msg {
-  font-size: 20px;
+	font-size: 20px;
 }
+
 .board_comment_input {
-  margin-bottom: 25px;
+	margin-bottom: 25px;
 }
+
 .board_comment_input i {
-  font-size: 25px;
-  color: #7db341;
+	font-size: 25px;
+	color: #7db341;
 }
+
 .board_comment_input input {
-  margin-left: 5px;
-  width: 520px;
-  height: 40px;
-  outline: none;
-  border: 1px solid rgba(128, 128, 128, 0.596);
-  border-radius: 5px;
+	margin-left: 5px;
+	width: 520px;
+	height: 40px;
+	outline: none;
+	border: 1px solid rgba(128, 128, 128, 0.596);
+	border-radius: 5px;
 }
+
 .detail_comment_button {
-  border: none;
-  background-color: white;
+	border: none;
+	background-color: white;
 }
+
 .detail_comment_button i {
-  font-size: 30px;
+	font-size: 30px;
 }
-  
+
 .board_comment_input input::placeholder {
-  padding: 10px;
+	padding: 10px;
 }
+
 .board_comment_input input:focus {
-  border-color: #7db341;
-  transition: border-color 0.5s ease-in-out;
+	border-color: #7db341;
+	transition: border-color 0.5s ease-in-out;
 }
+
 .board_detail_profile {
-  display: grid;
-  grid-template-columns: 10% 90%;
-  margin-bottom: 30px;
+	display: grid;
+	grid-template-columns: 10% 90%;
+	margin-bottom: 30px;
 }
+
 .detail_comment_nickname {
-  font-weight: bold;
+	font-weight: bold;
 }
+
 .board_detail_info {
-  margin-top: 5px;
+	margin-top: 5px;
 }
+
 .board_detail_info .comment_regDate {
-  margin-right: 10px;
+	margin-right: 10px;
 }
+
 .board_detail_info .comment_update_button:hover {
-  font-size: 13px;
-  font-weight: bold;
+	font-size: 13px;
+	font-weight: bold;
 }
+
 .board_detail_info .comment_delete_button:hover {
-  font-size: 13px;
-  font-weight: bold;
+	font-size: 13px;
+	font-weight: bold;
 }
+
 .detail_name_content .detail_comment_nickname {
-  margin-right: 7px;
+	margin-right: 7px;
 }
+
 .board_detail_profile img {
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
+	width: 50px;
+	height: 50px;
+	border-radius: 25px;
 }
+
 /* 하트 효과*/
 .heart {
-  height:100px;
-  width:100px;
-  margin: auto auto;
-  background-image: url(https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png);
-  cursor: pointer;
+	height: 100px;
+	width: 100px;
+	margin: auto auto;
+	background-image:
+		url(https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png);
+	cursor: pointer;
 }
+
 .heart:hover {
-  background-position: right;
-/*   animation: heart-splash 6s steps(28); */
+	background-position: right;
+	/*   animation: heart-splash 6s steps(28); */
 }
+
 .is_animating {
-  animation: heart-splash 2s steps(28);
+	animation: heart-splash 2s steps(28);
 }
-@keyframes heart-splash {
-  from { background-position: left }
-  to { background-position: right; }
+
+@
+keyframes heart-splash {from { background-position:left
+	
+}
+
+to {
+	background-position: right;
+}
 }
