레시피 메인 수정 및 상세 댓글 수정

--- a/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
@@ -99,6 +99,12 @@ html, body {
 #paragraph{
     margin-left: 15px;
 }
+#paragraph > p {
+    white-space: nowrap;
+    overflow: hidden;
+    width: 350px;
+    text-overflow: ellipsis;
+}
 #monthly-profile{
     width : 90px;
     height: 90px;
