--- a/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
@@ -454,6 +454,18 @@ a {
 	top : 3px;
 	left : -3px;
 }
+.current-page {
+	display: inline-block;
+    width: 25px;
+    height: 25px;
+    margin: 5px;
+    margin-bottom: 10px;
+	background :#7db341;
+	color : white;
+}
+.current-page > a{
+	color : white;
+}
 .other-profile{
     margin-top: 10px;
     width: 60px;
