mypage -> recipe 프로필 사진 저장 경로 및 불러오는 방식 수정

--- a/babmukja/src/main/webapp/resources/css/member/mypage.css
+++ b/babmukja/src/main/webapp/resources/css/member/mypage.css
@@ -260,8 +260,7 @@ body{
 }
    
 #scrapbook-creator{
-    width: 500px;
-    height: 600px;
+
     background: white;
 }
 #scrapbook-creator-header{
@@ -338,4 +337,7 @@ input[name='scrapbook-title']:focus{
 #book-cancel:hover{
     background: #7db341;
     color:white;
+}
+#cover-picture{
+	width: 100%;
 }
