--- a/babmukja/src/main/webapp/resources/css/board/detail.css
+++ b/babmukja/src/main/webapp/resources/css/board/detail.css
@@ -125,6 +125,7 @@
 
 .detail_comment_button i {
 	font-size: 30px;
+    height: 45px;
 }
 
 .board_comment_input input::placeholder {
@@ -173,21 +174,93 @@
 	height: 50px;
 	border-radius: 25px;
 }
-.board_comment_page_prev {
+.board_comment_prev,.board_comment_next {
 	display: inline-block;
 	width : 35px;
 	height : 25px;
 	margin: 5px;
     margin-bottom: 10px;
-    text-decoration: none;
-    color: rgb(81,81,81); !important
 }
-.board_detail_pagination {
+.right-arrow, .left-arrow {
+	width : 15px;
+	position : relative;
+	top : 3px;
+	left : -3px;
+}
+.board_current_page {
 	display: inline-block;
     width: 25px;
     height: 25px;
     margin: 5px;
     margin-bottom: 10px;
+	background :#7db341;
+	color : white;
+	text-align: center;
+    border-radius: 3px;
+}
+.board_current_page > a{
+	color : white;
+}
+.board_comment_pagination {
+	display: inline-block;
+    border: 1px solid #7db341;
+    width: 25px;
+    height: 25px;
+    margin: 5px;
+    margin-bottom: 10px;
+    text-align: center;
+    border-radius: 3px
+}
+.board_comment_pagination a {
+	color: rgb(81,81,81);
+}
+.board_comment_pagination:hover {
+	background : #7db341;	
+}
+.board_comment_pagination:hover a{
+	color : white;
+}
+.board_comment_prev,.board_comment_next {
+	display: inline-block;
+	width : 35px;
+	height : 25px;
+	margin: 5px;
+    margin-bottom: 10px;
+}
+.board_detail_span {
+	font-size: 20px;
+	font-weight: bold;
+	color: rgb(81, 81, 81);
+	margin-left: 40px;
+}
+.board_update_form {
+	width: 230px;
+	heigth: 35px;
+	border-radius: 3px;
+	resize: none;
+}
+.comment_update_plus_button {
+	font-size: 11px;
+	color: gray;
+	font-weight: bold;
+}
+.comment_update_cancel_button {
+	font-size: 11px;
+	color: gray;
+	font-weight: bold;
+}
+.comment_update_plus_button:hover {
+	font-size: 12px;
+	color: gray;
+	font-weigth: bold;
+}
+.comment_update_cancel_button:hover {
+	font-size: 12px;
+	color: gray;
+	font-weigth: bold;
+}
+.board_detail_comment_page {
+	text-align: center;
 }
 /* 하트 효과*/
 .heart {
