--- a/babmukja/src/main/webapp/resources/css/member/mypage.css
+++ b/babmukja/src/main/webapp/resources/css/member/mypage.css
@@ -299,6 +299,8 @@ input[name='scrapbook-title']:focus{
 }
 
 #scrapbook-coverselector-text{
+	width: 100%;
+	height: 100%;
 }
 #scrapbook-coverselector:hover{
     background: #7db;
