--- a/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
@@ -9,7 +9,7 @@
     margin-top:130px;
 }
 a {
-	color : black;
+	color : #7db341;;
 }
 #left-body{
     height: 100%;
@@ -185,7 +185,7 @@ a {
     color: white;
 }
 #writer-post{
-    height: 300px;
+    height: 250px;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
@@ -444,12 +444,14 @@ a {
 	font-size : 16px;
 }
 .pagination {
-	display: inline-block;
+    display: inline-block;
     border: 1px solid #7db341;
     width: 25px;
     height: 25px;
     margin: 5px;
     margin-bottom: 10px;
+    border-radius: 5px;
+    font-weight: bold;
 }
 
 .pagination:hover {
@@ -477,8 +479,10 @@ a {
     height: 25px;
     margin: 5px;
     margin-bottom: 10px;
-	background :#7db341;
-	color : white;
+    background: #7db341;
+    color: white;
+    border-radius: 5px;
+    font-weight: bold;
 }
 .current-page > a{
 	color : white;
