--- a/babmukja/src/main/webapp/resources/css/member/mypage.css
+++ b/babmukja/src/main/webapp/resources/css/member/mypage.css
@@ -224,7 +224,7 @@ body{
 }
 #scrapbook-wrapper{
     height: 620px;
-    width: 400px;
+    width: 730px;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
@@ -234,10 +234,24 @@ body{
 }
 .scrapbooks{
     width: 400px;
+    height: 500px;
+    box-shadow: 5px 5px 15px 3px darkgray;
+}
+.scrapbook-content{
+    width: 400px;
     height: 600px;
     margin-right: 20px;
-    box-shadow: 5px 5px 15px 3px darkgray;
-    display: inline-block;
+    display: inline-block;	
+}
+#scrapbooks-title-conatiner{
+	width: 400px;
+	margin: 0;
+	height: 90px;
+}
+#scrapbooks-title-conatiner p{
+	font-weight: lighter;
+	font-size : 17px;
+	text-align : center;
 }
 #scrapbook-wrapper::-webkit-scrollbar {
     background-color: #fff;
