--- a/babmukja/src/main/webapp/resources/css/meetup/manage.css
+++ b/babmukja/src/main/webapp/resources/css/meetup/manage.css
@@ -81,7 +81,17 @@
     font-size: 13px;
     line-height: 23px;
 }
-
+.manage_widthdrawl{
+	background-color: #7db341;
+    color:white;
+   margin: 0 auto;
+    border: 1px solid black;
+    padding:1px;
+    width:60px;
+    height:25px;
+    font-size: 13px;
+    line-height: 23px;
+}
 .host_meetup{
 
     padding:10px;
