--- a/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
@@ -418,6 +418,9 @@ a {
     background: white;
     cursor: pointer;
     font-size : 35px;
+    position: relative;
+    top: -10px;
+    left: -5px;
 }
 
 #comment-nope {
@@ -434,6 +437,8 @@ a {
     background: white;
     cursor: pointer;
     display : inline-block;
+    position: relative;
+    top: -10px;
 }
 #comment-other{
     border-top: 1px solid gainsboro;
