레시피 css수정

--- a/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
@@ -435,6 +435,8 @@ a {
     border : 0;
     background: white;
     cursor: pointer;
+    position:relative;
+    top:-10px;
 }
 
 .comment-update {
