--- a/babmukja/src/main/webapp/resources/css/recipe/recipeCaDetail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipeCaDetail.css
@@ -34,10 +34,12 @@ input[type='text']:focus {
    color: #7db341;
    cursor : pointer;
 }
+
 .boundary{
     background: url(../../images/wood.png);
     box-shadow: 0px 10px 15px 2px white;
     height:100px;
+    margin-top:60px;
 }
 #sector3{
     width: 1200px;
