jinyoung - member commit

--- a/babmukja/src/main/webapp/resources/css/member/searchpass.css
+++ b/babmukja/src/main/webapp/resources/css/member/searchpass.css
@@ -92,6 +92,9 @@
 .email_check {
   margin-bottom: 15px;
 }
+.certification_check2 .certification_result2 {
+	font-weight: bold;
+}
 
 .search_pass_input {
   display: none;
