--- a/babmukja/src/main/webapp/resources/css/member/mypage.css
+++ b/babmukja/src/main/webapp/resources/css/member/mypage.css
@@ -186,13 +186,13 @@ body{
     display: flex;
     align-content: space-between;
     justify-content: space-between;
-    height : 700px;
+    height : 650px;
     margin: 0 auto;
     border : 1px solid red;
 }
 #scrapbook-add{
-    width: 400px;
-    height: 600px;
+    width: 200px;
+    height: 650px;
     border: 5px dashed gainsboro;
     transition: .3s;
     display: grid;
@@ -205,7 +205,7 @@ body{
     opacity: 0.8;
 }
 #scrapbook-add-text1{
-    font-size: 16px;
+    font-size: 15px;
     text-align: center;
     color: white;
     font-weight: lighter;
@@ -217,19 +217,18 @@ body{
     font-weight: lighter;
 }
 #scrapbook-add-text3{
-    font-size: 17px;
+    font-size: 15px;
     text-align: center;
     color: white;
     font-weight: lighter;
 }
 #scrapbook-wrapper{
-    height: 620px;
-    width: 730px;
+    height: 640px;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
     padding: 15px;
-
+	width : 900px;
     margin-left: 30px;
 }
 .scrapbooks{
@@ -358,4 +357,12 @@ input[name='scrapbook-title']:focus{
 }
 #cover-picture{
 	width: 100%;
+}
+.pageAjax{
+	overflow: scroll;
+	background-color: #ddd;
+}
+.pageAjax > img{
+	width: 100%;
+	
 }
