--- a/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
@@ -9,7 +9,7 @@
     margin-top:130px;
 }
 a {
-	color : #7db341;;
+	color : #7db341;
 }
 #left-body{
     height: 100%;
@@ -585,4 +585,94 @@ button{
     background: url(/babmukja/resources/images/star5.png) no-repeat;
     height: 23px;
 }
+
+
+/* 우중 추가 */
+#modal-container{
+    width: 900px;
+    height: 700px;
+    background: white;
+    display : grid;
+    grid-template-rows: 10% 40% 42% 8%;
+}
+#scrapbook-wrapper-sec1 p{
+    font-size: 25px;
+    text-align: center;
+}
+
+#sec2-img-container{
+	display: block;
+	
+	border : 2px dashed gainsboro;
+    margin: 0 auto;
+    width: 200px;
+    height: 100%;
+}
+#scrapbook-wrapper-sec3{
+    margin-top: 10px;
+    white-space: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+#scrapbook-wrapper-sec3 div{
+    width: 160px;
+    height: 90%;
+    display: inline-block;
+}
+.scrapbook-content{
+	margin-left: 15px;
+	margin-right: 15px;
+}
+.scrapbook-content-title{
+    font-size: 15px;
+    padding : 0;
+    margin: 0;
+    width: 100%;
+    overflow: hidden;
+	white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.scrapbook-content-cover{
+	background-repeat : no-repeat;
+    
+}
+input[name="scrapbook-radio"]{
+    display: block;
+    margin: 0 auto;
+}
+
+#scrapbook-wrapper-sec4{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+#scrapbook-wrapper-sec4-button1{
+    width: 100px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid gainsboro;
+    margin-top:10px;
+    transition: .3s;
+}
+#scrapbook-wrapper-sec4-button2{
+    width: 100px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid gainsboro;
+    margin-top:10px;
+    margin-left: 10px;
+    transition: .3s;
+}
+#scrapbook-wrapper-sec4-button1:hover{
+    background: #7db341;
+    color:white;
+}
+#scrapbook-wrapper-sec4-button2:hover{
+    background: #7db341;
+    color:white;
+}
+
+
+
 
