--- a/babmukja/src/main/webapp/resources/css/store/mainpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/mainpb.css
@@ -471,4 +471,8 @@ hr {
     font-weight: bold;
 }
  
-
+#information_about_store{
+	background: url(/babmukja/resources/images/storemain.jpg);
+	width: 100%;
+	height: 1600px;
+}
