--- a/babmukja/src/main/webapp/resources/css/notice/notice comment.css
+++ b/babmukja/src/main/webapp/resources/css/notice/notice comment.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+/* @charset "UTF-8";
 .pccomment{
     background-color: #dcdcdc; height:25px;
     text-align: center;
@@ -120,3 +120,4 @@ td.pctd3{
     justify-content: left;
 }
 
+ */
