--- a/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
@@ -141,36 +141,45 @@ a {
     border-radius: 40px;
 }
 #profile-id{
-    font-size: 21px;
+    font-size: 16px;
     margin-top: 10px;
-    padding-left:3px;
+    text-align:center;
 }
 #profile-id > div:nth-child(2){
     font-size: 15px;
 }
+.follow:focus {
+	outline : none;
+}
 #follow{
-    height: 40px;
+    height: 35px;
+    width:52px;
     margin-top: 20px;
     border : 0;
     background : #eee;
     color: #777;
     border-radius: 5px;
+    font-size : 13px;
 }
 #followNo {
-	height: 40px;
+	height: 35px;
+	width: 52px;
     margin-top: 20px;
     border : 0;
-     background : #7db341;
+    background : #7db341;
     color: white;
     border-radius: 5px;
+    font-size : 13px;
 }
 #followLogin {
-	height: 40px;
+	height: 35px;
+	width: 52px;
     margin-top: 20px;
     border : 0;
     background : #eee;
     color: #777;
     border-radius: 5px;
+    font-size : 13px;
 }
 #follow:hover{
     background : #7db341;
@@ -191,8 +200,8 @@ a {
     grid-template-rows: 50% 50%;
 }
 #writer-post > a >img{
-    width:97%;
-    height: 97%;
+    width:100%;
+    height: 100%;
 }
 #post-img1{
     border-radius: 5px 0 0 0;
@@ -207,7 +216,7 @@ a {
     border-radius: 0 0 5px 0;
 }
 #more-post{
-    width: 98%;
+    width: 100%;
     border-radius : 0 0 10px 10px;
     height: 40px;
     font-size: 20px;
@@ -412,11 +421,15 @@ a {
     position:relative;
     top:-10px;
 }
+#comment-submit:focus {
+	outline :none;
+}
 #comment-submit > img, #comment-nope > img {
     width: 40px;
     height: 45px;
     position: relative;
     left: -3px;
+    top : -10px;
 }
 .comment-exit {	
     color: #7db341;
@@ -428,7 +441,9 @@ a {
     top: -15px;
     left: -5px;
 }
-
+.comment-exit:focus {
+	outline : none;
+}
 #comment-nope {
 	height: 50px;
     color: #7db341;
@@ -438,7 +453,9 @@ a {
     position:relative;
     top:-10px;
 }
-
+#comment-nope:focus {
+	outline:none;
+}
 .comment-update {
 	height: 50px;
     color: #7db341;
@@ -449,9 +466,14 @@ a {
     position: relative;
     top: -10px;
 }
+.comment-update:focus {
+	outline : none;
+}
 .comment-update > img {
-	width: 30px;
-    height: 35px;
+    width: 30px;
+    height: 40px;
+    position: relative;
+    top: -12px;
 }
 #comment-other{
     border-top: 1px solid gainsboro;
@@ -506,10 +528,9 @@ a {
 	color : white;
 }
 .other-profile{
-    margin-top: 10px;
-    width: 60px;
-    height: 60px;
-    border-radius: 30px;
+    width: 70px;
+    height: 70px;
+    border-radius: 40px;
 }
 .comment-other-wrapper{
     display: grid;
