--- a/babmukja/src/main/webapp/resources/css/store/mainpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/mainpb.css
@@ -479,3 +479,19 @@ hr {
 	width: 100%;
 	height: 100%;
 }
+#kakaopay_information{
+	width: 100%;
+	height: 80%;
+}
+#threeshin_information{
+	width: 100%;
+	height: 80%;
+}
+#kakaopay_information img{
+	width: 100%;
+	height: 100%;
+}
+#threeshin_information img{
+	width: 100%;
+	height: 100%;
+}
