pb store admin tiles update

--- a/babmukja/src/main/webapp/resources/css/admin/pbstoreselectlist.css
+++ b/babmukja/src/main/webapp/resources/css/admin/pbstoreselectlist.css
@@ -56,6 +56,22 @@
 	background-color: rgba(220, 220, 220, 0.5);
 }
 
+a {
+	text-decoration: none;
+	color: black;
+}
+
+a:visited {
+	text-decoration: none;
+	color: black;
+}
+
+a:link {
+	text-decoration: none;
+	color: black;
+}
+
+
 .page {
 	font-size: 15px;
 }
