--- a/babmukja/src/main/webapp/resources/css/store/mainpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/mainpb.css
@@ -481,15 +481,16 @@ hr {
 }
 #kakaopay_information{
 	width: 100%;
-	height: 90%;
+	height: 30%;
 }
 #threeshin_information{
+	margin-top: 50px;
 	width: 100%;
-	height: 90%;
+	height: 70%;
 }
 #kakaopay_information img{
 	width: 100%;
-	height: 100%;
+	height: 90%;
 }
 #threeshin_information img{
 	width: 100%;
