--- a/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
@@ -12,7 +12,7 @@ html, body {
 
 .swiper-container {
     width: 100%;
-    height: 100%;
+/*     height: 100%; */
     background-color: tomato;
   }
   .swiper-slide {
